<resources>
    <string name="app_name">K9 Record</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_message">Did the dog find the explosive?</string>
    <string name="dialog_title">Explosive found?</string>
    <string name="ok">OK</string>
    <string name="add_notes">Add Notes</string>
    <string name="cancel">Cancel</string>

    <string name="select_dog">Select a dog</string>
    <string name="select_explosives">Select explosives</string>
    <string name="dog_img_description">Dog Image</string>
    <string name="explosive_img_description">Explosive Image</string>
    <string name="continue_label">Continue</string>
    <string name="dog_selected">Dog Selected</string>
    <string name="explosive_selected">Explosive Selected</string>
    <string name="title_activity_new_session">NewSessionActivity</string>
    <string name="weight_label">Amount/Weight</string>
    <string name="explosive_name_label">Explosive Name</string>
    <string name="unit_prompt">Choose a unit</string>
    <string name="start_label">Start</string>

    <string-array name="unit_array_weight">
        <item>G</item>
        <item>LB</item>
    </string-array>

    <string-array name="unit_array_length">
        <item>IN</item>
        <item>FT</item>
    </string-array>

    <string-array name="unit_array_stick">
        <item>STICK</item>
    </string-array>

    <string name="no_explosive_text">No explosive added</string>
    <string name="to_add_explosive_text">Click the + button below to add explosives</string>
    <string name="location_text">Location:</string>
    <string name="quantity_error_text">Quantity value is required!</string>
    <string name="remove_text">Remove</string>
    <string name="cancel_text">Cancel</string>
    <string name="add_text">Add</string>
    <string name="update_text">Update</string>
    <string name="quantity_text">Quantity:</string>

    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <string name="flip_card_text">Flip card</string>
    <string name="positive_find_label">Pos. find</string>
    <string name="false_positive_label">False positive</string>
    <string name="title_activity_explosive">Edit Explosive</string>
    <string name="container_text">Container:</string>
    <string name="odor_text">Odor:</string>
    <string name="depth_text">Depth:</string>
    <string name="height_text">Height:</string>
    <string name="default_aid_status_label">NOT STARTED</string>
    <string name="handler_error_label">Handler Error</string>
    <string name="add_note_label">Add Note</string>
    <string name="miss_label">Miss</string>
    <string name="find_label">Find</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="search_hint">Search for a dog</string>
</resources>
