<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gtpd.k9.k9record.ExplosiveActivity"
    tools:showIn="@layout/activity_explosive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectedExplosiveName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/quantityEditText"
                android:text="@string/quantity_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/quantityEditText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/unitSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:prompt="@string/unit_prompt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/locationEditText"
                android:text="@string/location_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/heightEditText"
                android:text="@string/height_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/heightEditText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/depthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/depthEditText"
                android:text="@string/depth_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/depthEditText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/containerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/containerEditText"
                android:text="@string/container_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/containerEditText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/removeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:text="@string/remove_text"
                android:textColor="@android:color/holo_red_dark"
                android:onClick="removeExplosive" />

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel_text"
                android:onClick="cancel" />

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textStyle="bold"
                android:onClick="saveExplosive" />

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/updateButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/update_text"
                android:textStyle="bold"
                android:onClick="saveExplosive" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
